Styles/main.css
html, body{
    margin:0;
    padding:0;
    font-family: Arial, Helvetica, sans-serif;
}
body{
    background: url('../Images/Background.jpg') no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;

    display: grid;
    grid-template-columns: 50% 50%;
    grid-template-rows: 10vh 90vh;
}

/* Base default displays for large display */
#hero{
    display:none;
}

nav{
    grid-column: 1/3;
    grid-row: 1;
    padding: 2vh 5vw;
    
    display:flex;
    flex-wrap: nowrap;
}

    nav #companylogo{
        width: 80px;
        height: 80px;
    }

    nav h1{
        height:90px;
        margin-top:0;
        margin-left: 1rem;
        display: flex;
        flex-grow: 2;
        align-items: center;
        font-size: 48px;
        font-weight: bold;
    }
    nav ul{
        height: 90px;
        margin-top: 0;
        display: flex;
        align-items: center;
        list-style: none;
        font-size: 20px;
    }
    nav ul li{
        display: inline;
        margin-left: 1.25rem;
    }
    nav ul li a{
        text-decoration: none;
        color:black;
    }
    nav ul li a:hover{
        color: white;
    }

    nav #mobileNavHamburger{
        display: none;
    }

    .navTrayVisible{
        visibility: visible;
    }

#callout{
    grid-row: 2/3;
    padding-left: 5vw;

    display: flex;
    flex-direction: column;
    justify-content: center;
}
    #callout ul{
        list-style: none;
        padding-left: 0;
        line-height: 3rem;
    }

    #callout ul li,
    #callout p{
        font-size: 32px;
    }

    #callout button{
        width:275px;
        height:70px;
        color:black;
        background-color: #FF9300;
        border:1px solid #707070;
        -webkit-border-radius: 15px;
        -moz-border-radius: 15px;
        border-radius: 15px;
        font-size: 36px;
        margin-bottom: 4rem;
    }
    #callout button:hover{
        background-color:white;
        color:black;
        cursor: pointer;
    }

#quote
{
    grid-row:2/3;
    padding-right: 5vw;

    display: flex;
    justify-content: flex-end;
    align-items: center;
    text-align: right;
    font-size: 20px;
    font-style: italic;
}

#boxstylecallouts{
    display: none;
}

    #boxstylecallouts button{
        color:black;
        background-color: #FF9300;
        border:1px solid #707070;
        -webkit-border-radius: 15px;
        -moz-border-radius: 15px;
        border-radius: 15px;
        margin-bottom: 4rem;   
    }

@media only screen and (min-width:1295px) and (max-width:1631px)
{
    #callout ul li,
    #callout p{
        font-size: 22px;
    }

    #callout button{
        font-size: 26px;
        width:175px;
        height:50px;
    }

    #quote{
        font-size: 18px;
    }
}

/* Mobile display for tablet viewing */
@media only screen and (max-width:1294px){

    body{
        background:none;
        
        grid-template-columns: 100%;
        grid-template-rows: 1fr 1fr;
    }

    #hero{
        content: url('../Images/BackgroundTablet.jpg');
        display: block;
        grid-column: 1/2;
        grid-row:1/3;
        width:100vw;
        z-index:-1;
    }

    /* Setup hamburger nav */
    nav{
        grid-row: 1/2;
        grid-column: 1;

        padding:.75rem 1.75rem;
        height: 45px;
        background-color: white;
        opacity: 60%;
        border: 1px solid #707070;
    }
        nav #mobileNavHamburger{
            display: block;
            margin-top: .5rem;
            height: 30px;
            width: 30px;
        }

        nav ul{
            background-color:whitesmoke;
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height:25vh;
            display: flex;
            flex-direction: column;
            padding-left:0;
            padding-top:10vh;
            z-index: -1;
            visibility: hidden;
            font-weight: bold;
        }
        nav ul li{
            margin-bottom: 1.5rem;
        }
        nav ul li a:hover{
            color:#FF9300;
        }

        nav #companylogo{
            width: 40px;
            height: 40px;
        }
        nav h1{
            height:45px;
            font-size: 28px;
        }

    #callout{
        display: none;
    }

    #quote{
        grid-column: 1;
        grid-row: 1/3;
        padding-right:2rem;
        font-size:18px;
    }

    /* Show Box Callouts Section */
    #boxstylecallouts{
        display: block;
        grid-column: 1;
        grid-row:3/4;

        width:100vw;
        text-align: center;
    }
    #boxstylecallouts #cardcontainer{
        display: flex;
        justify-content: space-evenly;
    }
    #boxstylecallouts .card{
        border:4px solid #707070;
        width:215px;
        padding: 3rem;
    }
    #boxstylecallouts #pricing{
        font-size: 32px;
    }
    #boxstylecallouts button{
        width:440px;
        height:75px;
        font-size: 30px;
    }
}
@media only screen and (max-width:960px){
    #quote{
        font-size:14px;
    }
    #boxstylecallouts .card{
        width:150px;
    }
}

@media only screen and (max-width:760px){

    /* Stack the box callouts */
    #boxstylecallouts #cardcontainer{
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    #boxstylecallouts .card{
        width:50vw;
        margin-bottom: 1rem;
    }
}

/* Mobile phone views */
@media only screen and (max-width:630px){
    #hero{
        content: url('../Images/BackgroundPhone.jpg');
    }
    nav {
        height: 20px;
    }
        nav #companylogo{
            height: 20px;
            width: 20px;
        }
        nav #mobileNavHamburger{
            margin-top: 0;
            height:15px;
            width:15px;
        }
        nav h1{
            font-size:18px;
            height: 20px;
        }
        nav ul{
            height: 35vh;
        }

    #boxstylecallouts h2{
        font-size: 22px;
    }

    #boxstylecallouts #pricing{
        font-size: 22px;
    }
    #boxstylecallouts button{
        width:300px;
        height:85px;
    }

    #quote{
        display: none;
    }
}
@media only screen and (max-width:335px){
    nav{
        padding:.5rem;
    }
    nav h1{
        font-size:12px;
    }

    #boxstylecallouts h2{
        font-size: 18px;
    }

    #boxstylecallouts .card h3{
        font-size: 14px;
    }
    #boxstylecallouts .card{
        font-size: 10px;
    }
    #boxstylecallouts #pricing{
        font-size: 16px;
    }
    #boxstylecallouts button{
        width:225px;
        height:50px;
        
    }
}
/* Menu adjustment for tilted phones */
@media only screen and (max-height:540px){
    nav ul{
        padding-top:30vh;
        height: 70vh;
    }
}

